# ABACUS18EE

./: README.md
l10n-spain/: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
l10n-spain/l10n_es_facturae_face/: README.rst  __manifest__.py
l10n-spain/l10n_es_facturae_face/data/: cron_data.xml  edi.xml
l10n-spain/l10n_es_facturae_face/i18n/: l10n_es_facturae_face.pot
l10n-spain/l10n_es_facturae_face/models/: __init__.py  account_move.py  edi_exchange_record.py  l10n_es_facturae_face_base_handler.py  l10n_es_facturae_face_cancel_handler.py  l10n_es_facturae_face_output_handler.py  l10n_es_facturae_face_update_handler.py  wsse_signature.py
l10n-spain/setup/_metapackage/: pyproject.toml
tradingabacus/: requirements.txt
tradingabacus/account_move_report/: __manifest__.py
tradingabacus/l10n_branch_manager/: __manifest__.py
tradingabacus/l10n_co_ciius/: __manifest__.py
tradingabacus/l10n_co_edi_jorels/: __manifest__.py
tradingabacus/l10n_co_edi_jorels_pos/: __manifest__.py
tradingabacus/location_bridge/: __manifest__.py
tradingabacus/pos_barcode_camera/: __manifest__.py
tradingabacus/pos_barcode_camera.backup.20251015_150838/: __manifest__.py
tradingabacus/pos_membership_odoo/: __manifest__.py
tradingabacus/pos_membership_odoo_inherit/: __manifest__.py
tradingabacus/pos_proxy_service/: README.md  __manifest__.py
tradingabacus/pos_refund_password/: __manifest__.py
tradingabacus/product_dimension/: __manifest__.py
tradingabacus/product_report/: __manifest__.py
tradingabacus/sh_pos_manager_validation/: README.md  __manifest__.py
tradingabacus/update_from_csv/: __manifest__.py
tradingabacus/web_checkout_contact/: __manifest__.py
tradingabacus/web_checkout_contact.backup.20251015_141253/: __manifest__.py
tradingabacus/website_product_pack/: __init__.py  __manifest__.py
tradingabacus/wk_product_pack.backup.20251015_151017/: __init__.py  __manifest__.py
(+129 files in other folders)
