[project]
name = "odoo-addons-oca-l10n-spain"
version = "18.0.20251005.0"
dependencies = [
    "odoo-addon-account_promissory_note_caixabank==18.0.*",
    "odoo-addon-delivery_gls_asm==18.0.*",
    "odoo-addon-delivery_seur_atlas==18.0.*",
    "odoo-addon-l10n_ca_es_cnae==18.0.*",
    "odoo-addon-l10n_es_account_asset==18.0.*",
    "odoo-addon-l10n_es_account_banking_sepa_fsdd==18.0.*",
    "odoo-addon-l10n_es_account_statement_import_n43==18.0.*",
    "odoo-addon-l10n_es_aeat==18.0.*",
    "odoo-addon-l10n_es_aeat_mod111==18.0.*",
    "odoo-addon-l10n_es_aeat_mod115==18.0.*",
    "odoo-addon-l10n_es_aeat_mod123==18.0.*",
    "odoo-addon-l10n_es_aeat_mod130==18.0.*",
    "odoo-addon-l10n_es_aeat_mod190==18.0.*",
    "odoo-addon-l10n_es_aeat_mod216==18.0.*",
    "odoo-addon-l10n_es_aeat_mod296==18.0.*",
    "odoo-addon-l10n_es_aeat_mod303==18.0.*",
    "odoo-addon-l10n_es_aeat_mod347==18.0.*",
    "odoo-addon-l10n_es_aeat_mod349==18.0.*",
    "odoo-addon-l10n_es_aeat_mod390==18.0.*",
    "odoo-addon-l10n_es_aeat_partner_check==18.0.*",
    "odoo-addon-l10n_es_aeat_sii_oca==18.0.*",
    "odoo-addon-l10n_es_atc==18.0.*",
    "odoo-addon-l10n_es_cnae==18.0.*",
    "odoo-addon-l10n_es_facturae==18.0.*",
    "odoo-addon-l10n_es_facturae_face==18.0.*",
    "odoo-addon-l10n_es_intrastat_report==18.0.*",
    "odoo-addon-l10n_es_location_nuts==18.0.*",
    "odoo-addon-l10n_es_mis_report==18.0.*",
    "odoo-addon-l10n_es_partner==18.0.*",
    "odoo-addon-l10n_es_partner_mercantil==18.0.*",
    "odoo-addon-l10n_es_payment_order_confirming_aef==18.0.*",
    "odoo-addon-l10n_es_payment_order_confirming_sabadell==18.0.*",
    "odoo-addon-l10n_es_toponyms==18.0.*",
    "odoo-addon-l10n_es_vat_book==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
